--- a/MBBS-provisional.html
+++ b/MBBS-provisional.html
@@ -69,7 +69,7 @@
 						<div class="row1">
                             <div class="number">
                                 <p class="title2">Dated :</p>
-                                <p> {{credentialSubject.dated}}</p>
+                                <p> {{credentialSubject.nurseRegDate}}</p>
                             </div>
 							
 						</div>
@@ -124,7 +124,7 @@
                             <div class="subject passyear">
                                 <p class="title">Date & Place of registration</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.dated}}, Lucknow(U.P)</p>
+                                <p class="result">{{credentialSubject.nurseRegDate}}, Lucknow(U.P)</p>
                             </div>
                             <div >
                                 <p><font style="color:blue">Valid for compulsory rotating internship only and no other purpose.</font></p>
