--- a/Matrimonial-name-change-WC.html
+++ b/Matrimonial-name-change-WC.html
@@ -19,7 +19,8 @@
        .small{font-size:small;line-height:2px;color: red;font-weight:700;    margin-top: 1rem;}.h3,h3,p{line-height:1.5}.opt-8{opacity:80%}.text-right{text-align:right}.mainSection .cer-type,.text-center,header h3,header h4,header
         p {text-align:center}.secondaryColor{color:#043aff}.cc-container{position:relative;z-index:1}.bg-upsmf,
         footer{position:absolute;bottom:0}.bg-upsmf{z-index:0;left:50%;    top: 49%;width: 417px;margin:0 auto;transform:translate(-50%,-50%);opacity:.15;pos}
-        .en-certificate{width:653px;height:1090px;background-color:#fff;margin:auto;border:1px solid grey;padding:.8rem 1.5rem;position:relative;display:flex}.h1,h1,h2,h3,h4,h5,h6{line-height:1.5;font-family:Calibri;font-weight:700;margin-bottom:10px}.h3,h3{font-size:1.5rem}
+        .en-certificate{width:630px;height:1100px;background-color:#fff;margin:auto;border:1px solid grey;padding:.8rem 1.5rem;position:relative;
+            display:flex}.h1,h1,h2,h3,h4,h5,h6{line-height:1.5;font-family:Calibri;font-weight:700;margin-bottom:10px}.h3,h3{font-size:1.5rem}
             p{font-size:.875rem}hr{border:none;background-color:rgba(0,0,0,.15);height:1px;margin:10px 0}header h3{margin-top:5px}.mainSection 
             .en-details{width:100%;margin-top: 3rem;}.mainSection .cer-name{text-align:center;font-size:20px;color:#ec1f07;margin:1rem 0 0}
             .law .act,.mainSection .cer-type{text-transform:uppercase;margin:0}.mainSection .cer-type{font-size:21px;color:#043aff}
@@ -40,7 +41,7 @@
                 .f-division .profile-scan1 .barcode{width:6rem;display:flex;height: 2rem;} .f-division .profile-scan1{align-items: end;display: flex;flex-direction: column;}
                 .f-division .org-section .logoimage {width: 70%;display: flex;margin-left: 1rem;margin-top: 1rem;}.mainSection .en-details .annotion {font-weight: 700;}.subject1 .title1{color: #043aff;font-weight: 700;}
                 header .reg-no{display: flex;} footer .f-division .studentID2{width: 50%;margin-left: 2rem;}
-                .issued-on{margin-top: 4rem;}.watermark{position:absolute;left:50%;top:50%;transform:translate(-50%,-50%);WIDTH:50%;z-index:0}
+                .issued-on{margin-top: 4rem;}
                 
     </style>
 </head>
