--- a/Matrimony-Name-Change.additional-WC.html
+++ b/Matrimony-Name-Change.additional-WC.html
@@ -10,36 +10,38 @@
     <style type="text/css">
        .d-block,img{display:block}.mainSection .cer-name,.text-uppercase{text-transform:uppercase}
        .mb-0,header h3{margin-bottom:0}
-       .m-0,header p{margin:0;text}
-       .primary-color,header h3{color:#ec1f07}@font-face{font-family:Calibri;src:url(https://fonts.gstatic.com/l/font?kit=J7afnpV-BGlaFfdAhLEY67FIEjg&skey=a1029226f80653a8&v=v15) format('woff2');
+       .m-0,header p{margin:0}
+       .primary-color,header h3{color:#ec1f07;font-size: xx-large;}header h4{color:#043aff;margin: 0;}@font-face{font-family:Calibri;src:url(https://fonts.gstatic.com/l/font?kit=J7afnpV-BGlaFfdAhLEY67FIEjg&skey=a1029226f80653a8&v=v15) format('woff2');
        font-weight:400;font-style:normal}@font-face{font-family:Calibri;src:url(https://fonts.gstatic.com/l/font?kit=J7aanpV-BGlaFfdAjAo9_pxqHxIZrCE&skey=cd2dd6afe6bf0eb2&v=v15) format('woff2');
        font-weight:700;font-style:normal}*,::after,::before{box-sizing:border-box}
        html{font-size:16px}body{color:#0e0e10;font-family:Calibri;font-weight:400}img{max-width:100%}.mt-0{margin-top:0}.mt-5{margin-top:.3125rem}.mt-10{margin-top:10px}.mt-16{margin-top:1rem}
        .mb-5{margin-bottom:.3125rem}.mb-10{margin-bottom:.625rem}.mb-15{margin-bottom:.9375rem}.ft-8{font-size:.5rem}.alpha-5{opacity:.5}
-       .small{font-size:.625rem;line-height:.75rem;color: red;}.h3,h3,p{line-height:1.5}.opt-8{opacity:80%;font-size: small;
-        font-weight: 700;}.text-right{text-align:right}.mainSection .cer-type,.text-center,header h3,header
-        p {text-align:end}.secondaryColor{color:#2020a7}.cc-container{position:relative;z-index:1}.bg-upsmf,
-        footer{position:absolute;bottom:0}.bg-upsmf{z-index:0;left:50%;top:55%;width:60%;margin:0 auto;transform:translate(-50%,-50%);opacity:.15;pos}
-        .en-certificate{width:653px;height:1090px;background-color:#fff;margin:auto;border:1px solid grey;padding:.8rem 1.5rem;position:relative;display:flex}.h1,h1,h2,h3,h4,h5,h6{line-height:1.5;font-family:Calibri;font-weight:700;margin-bottom:10px}.h3,h3{font-size:1.5rem}
+       .small{font-size:small;line-height:2px;color: red;font-weight:700;    margin-top: 1rem;}.h3,h3,p{line-height:1.5}.opt-8{opacity:80%}.text-right{text-align:right}.mainSection .cer-type,.text-center,header h3,header h4,header
+        p {text-align:center}.secondaryColor{color:#043aff}.cc-container{position:relative;z-index:1}.bg-upsmf,
+        footer{position:absolute;bottom:0}.bg-upsmf{z-index:0;left:50%;    top: 49%;width: 417px;margin:0 auto;transform:translate(-50%,-50%);opacity:.15;pos}
+        .en-certificate{width:630px;height:1100px;background-color:#fff;margin:auto;border:1px solid grey;padding:.8rem 1.5rem;position:relative;
+            display:flex}.h1,h1,h2,h3,h4,h5,h6{line-height:1.5;font-family:Calibri;font-weight:700;margin-bottom:10px}.h3,h3{font-size:1.5rem}
             p{font-size:.875rem}hr{border:none;background-color:rgba(0,0,0,.15);height:1px;margin:10px 0}header h3{margin-top:5px}.mainSection 
-            .en-details{width:100%;margin:1.2rem auto 0}.mainSection .cer-name{text-align:center;font-size:20px;color:#ec1f07;margin:1rem 0 0}
-            .law .act,.mainSection .cer-type{text-transform:uppercase;margin:0}.mainSection .cer-type{    font-size: 18px;color: blue;display: flex;align-items: center;justify-content: center;}
-            .law .act,.org-section span{font-size:11px;font-family:Calibri;font-weight:700}.annot p{line-height: 33pt;text-align: justify;text-indent: 70px;font-size: medium;
-                font-weight: 700;}
-             .subject{display:flex;margin-bottom:2px}.subject p{margin:0 0 5px;}.subject .title{width:2rem;font-weight: bold;color:#2020a7}.subject 
-             .sep{width:1rem}.subject .result{font-family:Calibri;flex:0 0 62%;font-weight: 700;}footer{left:0;right:0}
+            .en-details{width:100%;margin-top: 3rem;}.mainSection .cer-name{text-align:center;font-size:20px;color:#ec1f07;margin:1rem 0 0}
+            .law .act,.mainSection .cer-type{text-transform:uppercase;margin:0}.mainSection .cer-type{font-size:21px;color:#043aff}
+            .law .act,.org-section span{font-size:11px;font-family:Calibri;font-weight:700}.mainSection .en-details
+             .subject{display:flex;margin-bottom:2px}.subject p{margin:0 0 5px;}.subject .title{width:17rem;color: #043aff;}.subject 
+             .sep{width:1rem}.subject .result{font-family:Calibri;font-weight:700;flex:0 0 42%}footer{left:0;right:0}
              .f-division{display:flex;justify-content:space-between;align-items:end}.f-division .profile-scan{width:70%;display:flex;gap:10px}
-             .f-division .org-section{width:30%}.f-division .profile-scan .scanner,.f-division 
+             .f-division .org-section{width:30%;margin-left:2rem}.f-division .profile-scan .scanner,.f-division .profile-scan 
+             .studentID{width: 282px;height: 169px;border:2px solid #000;overflow:hidden;padding:6px;display:flex;align-items:center;justify-content:center}
              .f-division .profile-scan .sig-attest{width:110px;height:70px;overflow:hidden;border:2px solid #000;display:flex;align-items:center;
-                justify-content:center}.org-section span{margin-bottom:0;text-align: center;}.org-section span img{height:25px;margin:0 auto;width: 103px;}.law .act{padding:0}
-                .address1{color:#2020a7}.top-logo .img{width:158px; height:156px;margin-left:190px}.act{margin-bottom: auto;text-align:center;font-size: 11pt;}
-                .act-det{margin-top: initial;text-align:center;font-size: 6pt;}.s-division{display:flex;justify-content:space-between;align-items: end;}.s-division .row .details{margin-bottom: 15px}
-                .s-division .row img{width: 73px;height: 73px;}
-                .subject1{display:flex;margin-bottom:2px;width: 20%;}.subject1 p{margin:0 0 5px;}.subject1 .title{width:12rem;color: #2020a7;}.subject1 
-                .sep{width:1rem}.subject1 .result{font-family:Calibri;font-weight:500;flex:0 0 62%}.s-division .row .title1{display: flex;justify-content: start;font-weight: bold;}.title2{display: flex;justify-content: end;font-weight: bold;}.profile-scan .studentID img{width:150px;height:170px;border:2px solid #000;overflow:hidden;padding:6px;display:flex;align-items:center;justify-content:center}
-                .s-division .profile-scan {text-align: center;} .org-section .sign{margin-bottom: 88px;} .s-division .row{display:flex;}.s-division .row .title1{color: blue;font-weight: 700;}
-                .en-details .j-division{font-weight: 700;} footer .s-division .row .details .row1{font-weight: 700;color: red;} .en-certificate .bg-upsmf{justify-content:center;display: flex;align-items: end;}.watermark{position:absolute;left:50%;top:50%;transform:translate(-50%,-50%);WIDTH:50%;z-index:0}
-    </style>
+                justify-content:center}.org-section span{margin-bottom:0}.org-section span img{height:25px;margin:0 auto;width: 103px;}.law .act{padding:0}
+                .address1{color:#043aff;font-weight: 700;}.top-logo{width:158px; height:156px;margin-left:190px}.act{margin-bottom: auto;text-align:center;font-size: 11pt;}
+                .act-det{margin-top: initial;text-align:center;font-size: 6pt;}.s-division{display:flex;justify-content:space-between;align-items: end;}
+                .s-division .row {flex: 1;align-items: end;}.row1 img{width: 73px;height: 73px;}
+                .subject1{display:flex;margin-top: 66px;}.subject1 p{margin:0 0 5px;}.subject1 .title{width: 12rem;;color: #043aff;font-weight: 700;}.subject1 
+                .sep{width:auto}.subject1 .result{font-family:Calibri;font-weight:500;flex:0 0 62%}.s-division .row  .title1{display: flex;align-items: start;flex-direction: column;width: fit-content;color: #043aff;font-weight: 700;}.s-division .row1  .title2{display: flex;align-items: end;color: #043aff;font-weight: 700;}
+                .s-division .row .number{display: flex;width} .s-division .row1 .number{display: flex;width}.mainSection .en-details .annot{text-indent: 4rem;font-weight: 700;}.f-division .profile-scan1 .qr{width:50%;display:flex;gap:10px;flex-direction: column;}
+                .f-division .profile-scan1 .barcode{width:6rem;display:flex;height: 2rem;} .f-division .profile-scan1{align-items: end;display: flex;flex-direction: column;}
+                .f-division .org-section .logoimage {width: 70%;display: flex;margin-left: 1rem;margin-top: 1rem;}.mainSection .en-details .annotion {font-weight: 700;}.subject1 .title1{color: #043aff;font-weight: 700;}
+                header .reg-no{display: flex;} footer .f-division .studentID2{width: 50%;margin-left: 2rem;}
+                .issued-on{margin-top: 4rem;}
 </head>
 <body>
     <div class="reg-certificate">
