--- a/Foreign-certificate-upnc-WC.html
+++ b/Foreign-certificate-upnc-WC.html
@@ -8,7 +8,7 @@
     <!-- <link href="css/style.css" rel="stylesheet"> -->
     
     <style type="text/css">
-       .d-block,img{display:block}.mainSection .cer-name,.text-uppercase{text-transform:uppercase}
+              .d-block,img{display:block}.mainSection .cer-name,.text-uppercase{text-transform:uppercase}
        .mb-0,header h3{margin-bottom:0}
        .m-0,header p{margin:0}
        .primary-color,header h3{color:black}@font-face{font-family:Calibri;src:url(https://fonts.gstatic.com/l/font?kit=J7afnpV-BGlaFfdAhLEY67FIEjg&skey=a1029226f80653a8&v=v15) format('woff2');
@@ -36,10 +36,10 @@
                 .act-det{margin-top: initial;text-align:center;font-size: 14pt;}.s-division{display:flex;justify-content:space-between;align-items: end;}
                 .s-division .row {flex: 1;align-items: end;}.row1 img{width: 73px;height: 73px;}
                 .subject1{display:flex;margin-bottom:4px}.subject1 p{margin:0 0 5px;}.subject1 .title{width:12rem;color: #2020a7;}.subject1 
-                .sep{width:1rem}.subject1 .result{font-family:Calibri;font-weight:500;flex:0 0 62%}.s-division .row .title1{display: flex;justify-content: start;}.title2{display: flex;justify-content: end;}.watermark{position:absolute;left:50%;top:50%;transform:translate(-50%,-50%);WIDTH:50%;z-index:0}
+                .sep{width:1rem}.subject1 .result{font-family:Calibri;font-weight:500;flex:0 0 62%}.s-division .row .title1{display: flex;justify-content: start;}.title2{display: flex;justify-content: end;}
                 .subject .data{width:fit-content}.en-details .tobody{margin-left: 1rem;}.c-block{text-align: justify;text-indent: 71px;margin-top: auto;font-size: 16px;}.details1{align-items: end;display: flex;justify-content: end;}
                 .s2{margin-top:88px;font-weight: bold;}.s3{font-weight: bold;}.dateandno{display: flex;flex-direction: column;}.daterow{display: flex;flex-direction: row;justify-content: space-between;font-weight: bold;}
-                .para2{    text-indent: 71px;}.todetails{margin-top: 3px;}.para{margin-top: 12px;}p{margin-top: 1px;margin-bottom: 1px;}
+                .para2{text-indent: 71px;}.todetails{margin-top: 3px;}.para{margin-top: 12px;}p{margin-top: 1px;margin-bottom: 1px;}
     </style>
 </head>
 <body>
