--- a/Foreign-certificate.html
+++ b/Foreign-certificate.html
@@ -101,7 +101,7 @@
                             <div class="subject ">
                                 <p class="title">Validity of Registration</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.validityOfRegistration}}</p>
+                                <p class="result">{{credentialSubject.validityUpto}}</p>
                             </div>
                             <div class="subject ">
                                 <p class="title">Date of Birth</p>
